--- a/public/css/Pages/page.css
+++ b/public/css/Pages/page.css
@@ -1,64 +1,83 @@
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #FFF;
+  font-size: 13px;
 }
-main div.leagues {
-  margin: 25px 300px;
+main div.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #313A6C;
+  gap: 25px;
+  margin-top: 25px;
+  padding: 10px;
+  border-radius: 20px;
+}
+main div.content div.leagues {
+  width: 700px;
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
-main div.leagues > div {
-  background-color: #FFF;
-  border-radius: 10px;
-}
-main div.leagues > div .league-header {
+main div.content div.leagues > div .league-header {
   display: flex;
   align-items: center;
   gap: 6px;
-  padding: 10px;
+  padding: 6px;
   color: black;
+  background-color: #FFF;
+  border-radius: 10px;
 }
-main div.leagues > div .league-header .flag {
+main div.content div.leagues > div .league-header .flag {
   width: 16px;
 }
-main div.leagues > div .league-header p {
+main div.content div.leagues > div .league-header p {
   margin: 0;
-  font-size: 16px;
+  font-size: 13px;
 }
-main div.leagues > div .league-matches {
+main div.content div.leagues > div .league-matches {
   display: flex;
   flex-direction: column;
 }
-main div.leagues > div .league-matches > div {
-  margin: 2px;
-  border-radius: 10px;
+main div.content div.leagues > div .league-matches > div {
+  border-bottom: 1px solid gray;
   background-color: #313A6C;
   color: white;
   display: flex;
   align-items: center;
   gap: 30px;
+  font-size: 13px;
 }
-main div.leagues > div .league-matches > div:hover {
+main div.content div.leagues > div .league-matches > div:hover {
   background-color: #274C77;
 }
-main div.leagues > div .league-matches > div > div {
+main div.content div.leagues > div .league-matches > div > div {
   width: calc(50% - 80px);
-  padding: 0 30px;
+  padding: 6px 30px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 6px;
-  flex-direction: row;
 }
-main div.leagues > div .league-matches > div > div img {
+main div.content div.leagues > div .league-matches > div > div img {
   height: 24px;
 }
-main div.leagues > div .league-matches > div > p {
+main div.content div.leagues > div .league-matches > div > div p {
+  margin: 0;
+}
+main div.content div.leagues > div .league-matches > div > p {
   width: 100px;
   text-align: center;
   margin: 0;
 }
-main div.leagues > div .league-matches > div .home {
+main div.content div.leagues > div .league-matches > div .home {
   justify-content: flex-end;
+}
+main div.content div.leagues > div .league-matches > div .away {
+  justify-content: flex-start;
 }
 
 /*# sourceMappingURL=page.css.map */
