--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -15,8 +15,8 @@ body {
       justify-content: space-between;
 
       .logo {
-        svg {
-          padding-top: 15px;
+        img {
+          padding-top: 10px;
           width: 150px;
         }
       }
