--- a/src/Views/Page/page.html.twig
+++ b/src/Views/Page/page.html.twig
@@ -9,33 +9,37 @@
 {% endblock %}
 
 {% block content %}
-    <input type="date" id="matchesDate">
-    <div class="leagues">
-        {% for league in leagues %}
-            <div>
-                <div class="league-header">
-                    <img class="flag" src="{{ league.flag }}" />
-                    <p>{{ league.country }} - {{ league.name }}</p>
-                </div>
+    <div class="content">
+        <div class="dateSelection">
+            <input type="date" id="matchesDate">
+        </div>
+        <div class="leagues">
+            {% for league in leagues %}
+                <div>
+                    <div class="league-header">
+                        <img class="flag" src="{{ league.flag }}" />
+                        <p>{{ league.country|upper }} - {{ league.name }}</p>
+                    </div>
 
-                <div class="league-matches">
-                    {% for match in matches %}
-                        {% if match.league_id == league.league_id %}
-                            <a href="/predict/{{ match.id }}">
-                                <div class="home">
-                                    <p>{{ match.home.name }}</p>
-                                    <img src="{{ match.home.logo }}" />
-                                </div>
-                                <p>| {{ match.date.0 }} |</p>
-                                <div class="away">
-                                    <img src="{{ match.away.logo }}" />
-                                    <p>{{ match.away.name }}</p>
-                                </div>
-                            </a>
-                        {% endif %}
-                    {% endfor %}
+                    <div class="league-matches">
+                        {% for match in matches %}
+                            {% if match.league_id == league.league_id %}
+                                <a href="/predict/{{ match.id }}">
+                                    <div class="home">
+                                        <p>{{ match.home.name }}</p>
+                                        <img src="{{ match.home.logo }}" />
+                                    </div>
+                                    <p>| {{ match.date.0 }} |</p>
+                                    <div class="away">
+                                        <img src="{{ match.away.logo }}" />
+                                        <p>{{ match.away.name }}</p>
+                                    </div>
+                                </a>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
