--- a/src/Views/base.html.twig
+++ b/src/Views/base.html.twig
@@ -14,24 +14,7 @@
     <div class="header">
         <div class="header__content">
             <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="159" height="84" viewBox="0 0 159 84">
-                    <defs>
-                        <filter id="GOAL" x="39" y="0" width="120" height="84" filterUnits="userSpaceOnUse">
-                            <feOffset dy="3" input="SourceAlpha"/>
-                            <feGaussianBlur stdDeviation="3" result="blur"/>
-                            <feFlood flood-opacity="0.161"/>
-                            <feComposite operator="in" in2="blur"/>
-                            <feComposite in="SourceGraphic"/>
-                        </filter>
-                    </defs>
-                    <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#GOAL)">
-                        <text id="GOAL-2" data-name="GOAL" transform="translate(48 54)" fill="#e7ecef" font-size="48" font-family="AvenirNextCondensed-BoldItalic, Avenir Next Condensed" font-weight="700" font-style="italic"><tspan x="0" y="0">GOAL</tspan></text>
-                    </g>
-                    <g id="Group_1" data-name="Group 1" transform="translate(-642 -224)" style="isolation: isolate">
-                        <text id="AL" transform="translate(644 276)" fill="#6096ba" font-size="48" font-family="AvenirNextCondensed-BoldItalic, Avenir Next Condensed" font-weight="700" font-style="italic"><tspan x="0" y="0">AL</tspan></text>
-                        <text id="_GO" data-name="     GO" transform="translate(642 276)" fill="#6096ba" font-size="48" font-family="AvenirNextCondensed-BoldItalic, Avenir Next Condensed" font-weight="700" font-style="italic"><tspan x="0" y="0" xml:space="preserve">     GO</tspan></text>
-                    </g>
-                </svg>
+                <img src="./image/logo.png">
             </div>
 
 
