--- a/src/Views/Page/page.html.twig
+++ b/src/Views/Page/page.html.twig
@@ -29,7 +29,7 @@
                                         <p>{{ match.home.name }}</p>
                                         <img src="{{ match.home.logo }}" />
                                     </div>
-                                    <p>| {{ match.date.0 }} |</p>
+                                    <p>{{ match.date.0 }}</p>
                                     <div class="away">
                                         <img src="{{ match.away.logo }}" />
                                         <p>{{ match.away.name }}</p>
