--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,11 +7,12 @@ body {
 body .header {
   background-color: #313A6C;
   color: white;
-  padding: var(--page-padding);
 }
 body .header .header__content {
+  margin: auto;
   display: flex;
   justify-content: space-between;
+  width: 1000px;
 }
 body .header .header__content .logo img {
   padding-top: 10px;
