--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,12 +1,12 @@
 body {
   font-family: sans-serif;
   margin: 0;
-  background-color: #060A38;
+  background-color: #EEE;
 
   --page-padding: 0 200px;
 
   .header {
-    background-color: #313A6C;
+    background-color: #121420;
     color: white;
 
     .header__content {
@@ -48,8 +48,7 @@ body {
           align-items: center;
           gap: 8px;
           border-radius: 6px;
-          border: 1px solid #FFF;
-          background-color: #313A6C;
+          background-color: #1B2432;
           padding: 10px 15px;
           text-transform: uppercase;
           height: 18px;
@@ -60,7 +59,7 @@ body {
           }
 
           &:hover {
-            background-color: #274C77;
+            background-color: #131313;
           }
 
           .user-icon {
